# conan-cmake-cpp

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  README.md  conanfile.py  configure.cmd  configure.sh
.github/workflows/: ci-cd.yml  configure-project  configure_project.yml
cmake/: StaticAnalysis.cmake
conan/: PresetsExtension.json
profiles/: linux-clang  windows-clang  windows-msvc
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
tests/: CMakeLists.txt  engine_test.cpp
